# onotebook

./: .env.example  .gitignore  CLAUDE.md  DOCKER.md  Makefile  README.md  docker-compose.yml
.claude/commands/: commit.md  polish.md  simplify.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  pyproject.toml
backend/src/backend/: config.py  database.py  main.py  models.py
backend/src/backend/chat/: __init__.py  router.py  schemas.py  service.py
backend/src/backend/documents/: __init__.py  router.py  schemas.py  service.py
backend/src/backend/embedding/: __init__.py  service.py  vectorstore.py
backend/src/backend/health/: __init__.py  router.py  schemas.py
backend/src/backend/llm/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
backend/src/backend/notebooks/: __init__.py  router.py  schemas.py  service.py
backend/src/backend/notes/: __init__.py  router.py  schemas.py  service.py
backend/src/backend/ollama/: __init__.py  router.py  schemas.py  service.py
backend/src/backend/processing/: __init__.py  chunking.py  extractors.py  service.py
backend/src/backend/settings/: __init__.py  router.py  schemas.py  service.py
backend/src/backend/sources/: __init__.py  router.py  schemas.py  service.py
backend/src/backend/sources/extractors/: search.py  url.py  youtube.py
backend/src/backend/studio/: __init__.py  router.py  schemas.py  service.py
docs/: app_spec.txt  feature_list.json
frontend/: CLAUDE.md  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/chat/: chat-content.tsx  chat-empty-state.tsx  chat-error-banner.tsx  chat-input-area.tsx  chat-messages-view.tsx  chat-ready-state.tsx  chat-session-list.tsx  chat-view.tsx  (+13 more)
frontend/src/hooks/: use-breakpoint.ts  use-chat-stream.ts  use-chat.ts  use-copy-to-clipboard.ts  use-documents.ts  use-health.ts  use-llm-providers.ts  use-notebooks.ts  use-notes.ts  use-ollama.ts  use-scroll-sentinel.ts  use-settings.ts  use-sources.ts  use-streaming-buffer.ts  use-studio.ts
frontend/src/lib/: api.ts  citation-utils.tsx  colors.ts  constants.ts  export-utils.ts  utils.ts
frontend/src/stores/: chat-actions.ts  notebook-store.ts  task-store.ts
frontend/src/types/: api.ts  studio.ts
(+55 files in other folders)
