[project]
name = "backend"
version = "0.1.0"
description = "ONotebook - Open-source RAG knowledge assistant"
readme = "README.md"
authors = [
    { name = "bigchaipat", email = "bchaipats@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.0",
    "fastapi[standard]>=0.128.0",
    "fpdf2>=2.8.5",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.0",
    "lxml>=6.0.2",
    "pydantic-settings>=2.12.0",
    "pymupdf4llm>=0.2.8",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.2.0",
    "sqlmodel>=0.0.31",
    "tiktoken>=0.12.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
